<resources>
    <string name="app_name">PeruFestApp</string>
    <string name="valtituloapp">PeruFest</string>
    <string name="valbtnis">Iniciar sesion</string>
    <string name="valusuario">Usuario</string>
    <string name="valpassword">Contraseña</string>
    <string name="valogin">Iniciar Sesion</string>
    <string name="valpaswre">¿Se te olvidó tu contraseña?</string>
    <string name="valcorreo">Correo</string>
    <string name="valbtnsig">SIGUIENTE</string>
    <string name="valtxtregistro">COMPLETA EL REGISTRO</string>
    <string name="vallogin">PeruFest</string>
    <string name="valnombres">Ingresa tu Nombre</string>
    <string name="valapellidoa">Ingresa tu Apellido</string>
    <string name="valdoc">Tipo de Documento de Identidad</string>
    <string name="valinte">Eventos de Interés</string>
    <string name="valgen">Seleccione su Género</string>
    <string name="valchek">Seleccione Eventos de Interés</string>
    <string name="valdni">DNI</string>
    <string name="valpasa">Pasporte</string>
    <string name="valca">Carnet de Extranjería</string>
    <string name="valnumdoc">Número del Documento</string>
    <string name="valnumcel">Número del Celular</string>
    <string name="valrbmas">Masculino</string>
    <string name="valrbfem">Femenino</string>
    <string name="valconchek">Conciertos</string>
    <string name="valchekte">Teatros</string>
    <string name="valcheken">Entretenimiento</string>
    <string name="valcheotr">Otros</string>
    <string name="valcorreoS">Ingresa tu Correo</string>
    <string name="valpassec">Confirma tu Contraseña</string>
    <string name="valpaswd">Contraseña</string>
    <string name="btnregis">REGISTRAR</string>
    <string name="btncan">CANCELAR</string>
    <string name="valbieusu">Bienvenido</string>
    <string name="valcreareven">CREAR EVENTO</string>
    <string name="valdesc">Descripción del Evento</string>
    <string name="valnomeven">Nombre del Evento</string>
    <string name="valdeseven">Descripción del Evento</string>
    <string name="valfeceven">Fecha del Evento</string>
    <string name="valsubirimg">Seleccione Imagen</string>
    <string name="valdir">Dirección del Evento</string>
    <string name="valbtncrear">CREAR EVENTO</string>
    <string name="btnsiguiente">SIGUIENTE</string>
    <string name="valreg">REGISTRAR</string>
    <string name="valacc">ACCEDER</string>
    <string name="valbtncerras">CERRAR SESIÓN</string>
    <string name="valbienusu" />
    <string name="valbtnrdper">PERFIL</string>
    <string name="valerfil">PERFIL</string>
    <string name="valnomper">NOMBRE</string>
    <string name="valapelperf">APELLIDOS</string>
    <string name="valcelper">CELULAR</string>
    <string name="valactua">ACTUALIZAR</string>
    <string name="valmenu">MENU</string>
    <string name="valdocnum">Documento:</string>
    <string name="valnum">Nº Doc:</string>
    <string name="valgenperpf">Género:</string>
    <string name="valprecuenta">¿Aún no tienes una cuenta?</string>
    <string name="valcrecuen">Crea una Cuenta</string>
    <string name="valfechanac">Fecha de Nacimiento</string>
    <string name="valtipentrada">Tipo de Entrada</string>
    <string name="valmegusta">ME GUSTA</string>
    <string name="valcompar">COMPARTIR</string>
</resources>